--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,7 +50,7 @@
             <h2>Queremos saber de ti</h2>
         </section>
     </main>
-        <section class="grid-container2">
+        <section class="contacto">
             <div>
                 <h3>Envíanos un mensaje</h3>
                 <form class="needs-validation" novalidate>
