--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./css/styles.css">
-    <title>Desarrollo Web | Claudia Gutiérrez</title>
+    <title>Desarrollo Web | Claudia Gutiérrez Tamez</title>
 </head>
 <body>
     <header>
