error de clase en servicios

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -71,7 +71,7 @@
             <img src="../img/accesibilidad.jpg" width="80%" height="80%">
             <div class="gris-content">
                 <h2>Accesibilidad Web</h2>
-                <h3>Nuestros servicios abarcan la optimización de elementos clave como el contraste de colores, la estructura de encabezados, la navegación por teclado y la descripción adecuada de imágenes. También proporcionamos capacitación para tu equipo, asegurando que las prácticas de accesibilidad se mantengan a lo largo del tiempo, y realizamos pruebas de usuario con personas con discapacidades para obtener feedback real y aplicar mejoras continuas.</p>
+                <p>Nuestros servicios abarcan la optimización de elementos clave como el contraste de colores, la estructura de encabezados, la navegación por teclado y la descripción adecuada de imágenes. También proporcionamos capacitación para tu equipo, asegurando que las prácticas de accesibilidad se mantengan a lo largo del tiempo, y realizamos pruebas de usuario con personas con discapacidades para obtener feedback real y aplicar mejoras continuas.</p>
             </div>
         </section>
         <section class="final">
