Agregué el link al boton

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -75,7 +75,7 @@
             </div>
         </section>
         <section class="final">
-            <button class= "primary-button">Envíanos un mensaje por WhatsApp</button>
+            <button class= "primary-button"><a href="https://wa.me/+528180882054?" target="_blank">Envia un mensaje por WhatsApp</a> </button>
         </section>
         <footer>
             <section class="footer-section">
