--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./css/styles.css">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        
     <title>Desarrollo Web | Claudia Gutiérrez Tamez</title>
 </head>
 <body>
@@ -45,7 +48,7 @@
     </header>
     <main>
         <section class="backhome">
-            <h1>DESARROLLO ESPECIALIZADO DE PÁGINAS WEB</h1>
+            <h1 id="animation1">DESARROLLO ESPECIALIZADO DE PÁGINAS WEB</h1>
             <h2>Claudia Gutiérrez Web</h2>
         </section>
     </main>
