--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./css/styles.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
         
     <title>Desarrollo Web | Claudia Gutiérrez Tamez</title>
 </head>
