--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,6 +10,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="/img/favicon.png" type="image/x-icon">
     <title>Desarrollo Web | Claudia Gutiérrez</title>
 </head>
 <body>
