--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" href="/img/favicon.png" type="image/x-icon">
+        <link rel="icon" type="image/favicon.png" href="/favicon.png"/>
         
     <title>Desarrollo Web | Claudia Gutiérrez Tamez</title>
 </head>
