--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -9,7 +9,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../css/styles.css">
-        <link rel="icon" href="../img/favicon.ico" type="image/x-icon">>
+        <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <title>Desarrollo Web | Claudia Gutiérrez</title>
 </head>
 <body>
