--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -10,7 +10,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../css/styles.css">
-        <link rel="icon" type="./img/favicon.png" href="./img/favicon.png"/>
+        <link rel="icon" type="../img/favicon.png" href="../img/favicon.png"/>
     <title>Desarrollo Web | Claudia Gutiérrez</title>
 </head>
 <body>
