--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </grid>
     </section>
 </body>
-<footer>
+<footer class="allfooter">
     <section class="footer-section">
         <div class="footer-left">
             <a class="fb-icon" href="https://www.facebook.com/claudiagutierrezweb" target="_blank"><img
