--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Desarrollo Web | Claudia Gutiérrez Web</title>
+    <title>Claudia Gutiérrez | Desarrollo Web</title>
+    <meta name="description"
+        content="Claudia Gutiérrez Web ofrece diseño de página web en México, páginas accesibles, landing, SEO especializado, tienda en línea y páginas informativas.">
+    <meta name="keywords"
+        content="diseño, web, accesible, wordpress, página, web, informativa tiendas, linea, webmarket, México, Monterrey, sitios">
+    <meta name="robots" content="index, follow">
+    <meta name="copyright" content="Rehilete Proyectos">
+    <meta name="language" content="ES">
+    <meta name="author" content="Claudia Gutiérrez Tamez">
+    <meta name="creationdate" content="29/07/24">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="general">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./css/estilos.css">
-        <link rel="icon" type="img/favicon.png" href="img/favicon.png"/>
-        
+    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="icon" type="img/favicon.png" href="img/favicon.png" />
+
     <title>Desarrollo Web | Claudia Gutiérrez Tamez</title>
 </head>
+
 <body>
     <header>
         <img src="./img/logo.png">
@@ -104,9 +121,9 @@
                         target="blank">Conoce las características</a></div>
                 <div class="Informativa"><img src="./img/cool.jpg">Informativa <a href="https://coolnutsmx.com/"
                         target="blank">Contiene recetas</a></div>
-                        <div class="Estandar"><img src="./img/luxury.jpg">Estandar Page <a href="http://luxuryconcierge.com.mx/"
-                            target="blank">Descubre la Riviera Maya</a></div>
-                        <div class="Portal"><img src="./img/tecnotabla.jpg">Portal web <a href="https://tecnotabla.com/"
+                <div class="Estandar"><img src="./img/luxury.jpg">Estandar Page <a href="http://luxuryconcierge.com.mx/"
+                        target="blank">Descubre la Riviera Maya</a></div>
+                <div class="Portal"><img src="./img/tecnotabla.jpg">Portal web <a href="https://tecnotabla.com/"
                         target="blank">Utilidades al alcance</a></div>
                 <div class="Portafolio"><img src="./img/vania.jpg">Portafolio <a href="http://vaniajacobo.com/"
                         target="blank">Directora de arte</a></div>
@@ -120,7 +137,8 @@
             <div class="footer-left">
                 <a class="fb-icon" href="https://www.facebook.com/claudiagutierrezweb" target="_blank"><img
                         src="./img/fb.png"></a>
-                <a href="https://www.linkedin.com/in/claudiagutierreztamez/" target="_blank"><img src="./img/in.png"></a>
+                <a href="https://www.linkedin.com/in/claudiagutierreztamez/" target="_blank"><img
+                        src="./img/in.png"></a>
             </div>
             <div class="footer-right">
                 <p>Desarrollo: Claudia Gutiérrez 2024 </p>
@@ -129,4 +147,5 @@
         </section>
     </footer>
 </body>
+
 </html>
