--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -1,89 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Claudia Gutiérrez | Desarrollo Web</title>
+    <meta name="description"
+        content="Claudia Gutiérrez Web ofrece diseño de página web en México, páginas accesibles, landing, SEO especializado, tienda en línea y páginas informativas.">
+    <meta name="keywords"
+        content="diseño, web, accesible, wordpress, página, web, informativa tiendas, linea, webmarket, México, Monterrey, sitios">
+    <meta name="robots" content="index, follow">
+    <meta name="copyright" content="Rehilete Proyectos">
+    <meta name="language" content="ES">
+    <meta name="author" content="Claudia Gutiérrez Tamez">
+    <meta name="creationdate" content="29/07/24">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="general">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="../css/estilos.css">
-        <link rel="icon" type="../img/favicon.png" href="../img/favicon.png"/>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="icon" type="../img/favicon.png" href="../img/favicon.png" />
     <title>Desarrollo Web | Claudia Gutiérrez</title>
 </head>
+
 <body>
-<header>
-    <img src="../img/logo.png">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/FAQ.html">FAQ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                </ul>
+    <header>
+        <img src="../img/logo.png">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/FAQ.html">FAQ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
     <main>
         <section class="backserv">
             <h1>PREGUNTAS FRECUENTES</h1>
             <h2>ACLARA TUS DUDAS</h2>
         </section>
-        </main>
     </main>
-        <body>
-            <section class="faq">
+    </main>
+
+    <body>
+        <section class="faq">
             <H2>Base de conocimiento</H2>
             <ul>
                 <li>
                     <h3>¿Cuál es la diferencia entre una página web estática y una dinámica?</h3>
-                    <p>Una página web estática muestra el mismo contenido a todos los visitantes y es ideal para sitios con información que no cambia frecuentemente, como portafolios o páginas informativas. Una página web dinámica, en cambio, puede mostrar contenido diferente basado en interacciones del usuario o datos en tiempo real, lo cual es ideal para blogs, tiendas en línea, y sitios con bases de datos.</p>
+                    <p>Una página web estática muestra el mismo contenido a todos los visitantes y es ideal para sitios
+                        con información que no cambia frecuentemente, como portafolios o páginas informativas. Una
+                        página web dinámica, en cambio, puede mostrar contenido diferente basado en interacciones del
+                        usuario o datos en tiempo real, lo cual es ideal para blogs, tiendas en línea, y sitios con
+                        bases de datos.</p>
                 </li>
                 <li>
                     <h3>¿Qué tipo de página web necesito si quiero vender productos en línea?</h3>
-                    <p>Para vender productos en línea, necesitas un sitio de comercio electrónico. Este tipo de página web incluye características esenciales como catálogos de productos, carrito de compras, procesamiento de pagos, y gestión de inventarios. Plataformas populares para comercio electrónico incluyen Shopify, WooCommerce y Magento.</p>
+                    <p>Para vender productos en línea, necesitas un sitio de comercio electrónico. Este tipo de página
+                        web incluye características esenciales como catálogos de productos, carrito de compras,
+                        procesamiento de pagos, y gestión de inventarios. Plataformas populares para comercio
+                        electrónico incluyen Shopify, WooCommerce y Magento.</p>
                 </li>
                 <li>
                     <h3>¿Por qué es importante que mi sitio web sea accesible?</h3>
-                    <p>La accesibilidad web es crucial porque garantiza que todas las personas, incluidas aquellas con discapacidades, puedan acceder y utilizar tu sitio web de manera efectiva. Esto no solo amplía tu audiencia potencial, sino que también cumple con las leyes y normativas de accesibilidad, evitando posibles problemas legales. Además, un sitio accesible mejora la experiencia del usuario en general, ya que tiende a ser más fácil de navegar y entender. Implementar accesibilidad puede también mejorar tu SEO, ya que muchos principios de accesibilidad, como el uso adecuado de etiquetas y descripciones, coinciden con las mejores prácticas de optimización para motores de búsqueda.</p>
+                    <p>La accesibilidad web es crucial porque garantiza que todas las personas, incluidas aquellas con
+                        discapacidades, puedan acceder y utilizar tu sitio web de manera efectiva. Esto no solo amplía
+                        tu audiencia potencial, sino que también cumple con las leyes y normativas de accesibilidad,
+                        evitando posibles problemas legales. Además, un sitio accesible mejora la experiencia del
+                        usuario en general, ya que tiende a ser más fácil de navegar y entender. Implementar
+                        accesibilidad puede también mejorar tu SEO, ya que muchos principios de accesibilidad, como el
+                        uso adecuado de etiquetas y descripciones, coinciden con las mejores prácticas de optimización
+                        para motores de búsqueda.</p>
                 </li>
                 <li>
                     <h3>¿Necesito un blog en mi página web?</h3>
-                    <p>Tener un blog en tu página web es muy beneficioso si deseas mejorar tu SEO, compartir conocimientos y establecerte como una autoridad en tu campo. Un blog puede atraer tráfico orgánico a tu sitio, mantener a los visitantes comprometidos, y ofrecer contenido fresco y relevante que responda a las necesidades e intereses de tus clientes potenciales.</p>
+                    <p>Tener un blog en tu página web es muy beneficioso si deseas mejorar tu SEO, compartir
+                        conocimientos y establecerte como una autoridad en tu campo. Un blog puede atraer tráfico
+                        orgánico a tu sitio, mantener a los visitantes comprometidos, y ofrecer contenido fresco y
+                        relevante que responda a las necesidades e intereses de tus clientes potenciales.</p>
                 </li>
             </ul>
         </section>
         <footer>
             <section class="footer-section">
                 <div class="footer-left">
-                <a class="fb-icon" href="https://www.facebook.com/claudiagutierrezweb" target="_blank"><img src="../img/fb.png"></a>
-                <a href="https://www.linkedin.com/in/claudiagutierreztamez/" target="_blank"><img src="../img/in.png"></a>
+                    <a class="fb-icon" href="https://www.facebook.com/claudiagutierrezweb" target="_blank"><img
+                            src="../img/fb.png"></a>
+                    <a href="https://www.linkedin.com/in/claudiagutierreztamez/" target="_blank"><img
+                            src="../img/in.png"></a>
                 </div>
                 <div class="footer-right">
-                <p>Desarrollo: Claudia Gutiérrez 2024 </p>
-                <a href="https://rehileteproyectos.com/" target="_blank"><img src="../img/rehilete.png"></a>
-                </div>    
+                    <p>Desarrollo: Claudia Gutiérrez 2024 </p>
+                    <a href="https://rehileteproyectos.com/" target="_blank"><img src="../img/rehilete.png"></a>
+                </div>
             </section>
         </footer>
-        </body>
-        </html>
+    </body>
+
+</html>
