--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Claudia Gutiérrez | Desarrollo Web</title>
+    <meta name="description"
+        content="Claudia Gutiérrez Web ofrece diseño de página web en México, páginas accesibles, landing, SEO especializado, tienda en línea y páginas informativas.">
+    <meta name="keywords"
+        content="diseño, web, accesible, wordpress, página, web, informativa tiendas, linea, webmarket, México, Monterrey, sitios">
+    <meta name="robots" content="index, follow">
+    <meta name="copyright" content="Rehilete Proyectos">
+    <meta name="language" content="ES">
+    <meta name="author" content="Claudia Gutiérrez Tamez">
+    <meta name="creationdate" content="29/07/24">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="general">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="../css/estilos.css">
-        <link rel="icon" type="../img/favicon.png" href="../img/favicon.png"/>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="icon" type="../img/favicon.png" href="../img/favicon.png" />
     <title>Desarrollo Web | Claudia Gutiérrez</title>
 </head>
+
 <body>
     <header>
         <img src="../img/logo.png">
@@ -49,35 +63,52 @@
             <h1>DESARROLLO ESPECIALIZADO DE PÁGINAS WEB</h1>
             <h2>Claudia Gutiérrez Web</h2>
         </section>
-        </main>
-        <body>
-            <section>
+    </main>
+
+    <body>
+        <section>
             <div class="nosotros">
-            <img src="../img/home-nosotros.jpg" width="800px">
+                <img src="../img/home-nosotros.jpg" width="800px">
             </div>
             <div class="nosotros-text">
-            <h2>La historia...</h2>
-            <p>A 12 años de haber fundado Rehilete Proyectos (antes G diseñería) puedo ver que lo más importante ha sido el aprendizaje continuo, escuchar y comprender la visión de las nuevas generaciones, crear modelos de trabajo y seguir metodologías para tener la capacidad de dimensionar mejor los proyectos, minimizando los riesgos y manteniendo una comunicación con el cliente mediante un sistema efectivo.</p>
+                <h2>La historia...</h2>
+                <p>A 12 años de haber fundado Rehilete Proyectos (antes G diseñería) puedo ver que lo más importante ha
+                    sido el aprendizaje continuo, escuchar y comprender la visión de las nuevas generaciones, crear
+                    modelos de trabajo y seguir metodologías para tener la capacidad de dimensionar mejor los proyectos,
+                    minimizando los riesgos y manteniendo una comunicación con el cliente mediante un sistema efectivo.
+                </p>
 
-            <h2>Crecimiento...</h2>
-            <p>Hace más una década, me veía como una persona que podía dar servicio de diseño de páginas web. Hoy, construyo soluciones web, servicios de consultoría, produciendo la versión de los negocios en línea y enfocándome en la experiencia del usuario, orientando a los clientes para definir con claridad el objetivo de su página y cumplir con las mejores prácticas para una gran experiencia de usuario.</p>
+                <h2>Crecimiento...</h2>
+                <p>Hace más una década, me veía como una persona que podía dar servicio de diseño de páginas web. Hoy,
+                    construyo soluciones web, servicios de consultoría, produciendo la versión de los negocios en línea
+                    y enfocándome en la experiencia del usuario, orientando a los clientes para definir con claridad el
+                    objetivo de su página y cumplir con las mejores prácticas para una gran experiencia de usuario.</p>
 
-            <h2>La actualidad</h2>
-            <p>En los primeros meses del 2020 tuve la oportunidad de estar más cerca del diseño universal (diseño inclusivo) y estando ya a mitad de año, en el cual hemos estado viviendo momentos difíciles a nivel mundial, me he retado a conocer nuevas tendencias, actualizar y reforzar los temas de mi área para alcanzar un mejor nivel para mis clientes, ¿cómo?, estudiando, analizando, haciendo colaboraciones con empresas y aterrizando los conocimientos en proyectos. Actualmente, entrando en el 2014, estoy actualizándome y especializándome en SEO friendly, nuevas tendencias de UX e integrando AI en los desarrollos, orientado al objetivo del cliente. 
-            </p>
+                <h2>La actualidad</h2>
+                <p>En los primeros meses del 2020 tuve la oportunidad de estar más cerca del diseño universal (diseño
+                    inclusivo) y estando ya a mitad de año, en el cual hemos estado viviendo momentos difíciles a nivel
+                    mundial, me he retado a conocer nuevas tendencias, actualizar y reforzar los temas de mi área para
+                    alcanzar un mejor nivel para mis clientes, ¿cómo?, estudiando, analizando, haciendo colaboraciones
+                    con empresas y aterrizando los conocimientos en proyectos. Actualmente, entrando en el 2014, estoy
+                    actualizándome y especializándome en SEO friendly, nuevas tendencias de UX e integrando AI en los
+                    desarrollos, orientado al objetivo del cliente.
+                </p>
             </div>
-        </section>  
+        </section>
         <footer>
             <section class="footer-section">
                 <div class="footer-left">
-                <a class="fb-icon" href="https://www.facebook.com/claudiagutierrezweb" target="_blank"><img src="../img/fb.png"></a>
-                <a href="https://www.linkedin.com/in/claudiagutierreztamez/" target="_blank"><img src="../img/in.png"></a>
+                    <a class="fb-icon" href="https://www.facebook.com/claudiagutierrezweb" target="_blank"><img
+                            src="../img/fb.png"></a>
+                    <a href="https://www.linkedin.com/in/claudiagutierreztamez/" target="_blank"><img
+                            src="../img/in.png"></a>
                 </div>
                 <div class="footer-right">
-                <p>Desarrollo: Claudia Gutiérrez 2024 </p>
-                <a href="https://rehileteproyectos.com/" target="_blank"><img src="../img/rehilete.png"></a>
-                </div>    
+                    <p>Desarrollo: Claudia Gutiérrez 2024 </p>
+                    <a href="https://rehileteproyectos.com/" target="_blank"><img src="../img/rehilete.png"></a>
+                </div>
             </section>
-        </footer>      
-            </body>
-            </html>
+        </footer>
+    </body>
+
+</html>
