--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -16,6 +16,13 @@
     <meta name="creationdate" content="29/07/24">
     <meta name="distribution" content="global">
     <meta name="rating" content="general">
+    <!--! PROTOCOLO OPEN GRAFH-->
+    <meta property="og:type" content="página web informativa">
+    <meta property="og:title" content="Claudia Gutiérrez | Desarrollo web">
+    <meta property="og:description"
+        content="diseño de página web en México, páginas accesibles, landing, SEO especializado, tienda en línea y páginas informativas">
+    <meta property="og:url" content="https://claugutierrezt.github.io/coderhouse/">
+    <meta property="og:image" content="https://claugutierrezt.github.io/coderhouse/img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
