--- a/index.html
+++ b/index.html
@@ -82,24 +82,24 @@
 
     <section class="homeservicios">
         <div>
-            <a href="./pages/servicios.html"><img src="./img/web.jpg" width="80%" height="80%"></a>
+            <a href="./pages/servicios.html"><img src="./img/web.jpg" width="80%" height="80%" alt="servicio de páginas web"></a>
             <h3>Desarrollo Web</h3>
             <h4>A tu medida y lo que realmente necesitas</h4>
         </div>
         <div>
-            <a href="./pages/servicios.html"><img src="./img/seo.jpg" width="80%" height="80%"></a>
+            <a href="./pages/servicios.html"><img src="./img/seo.jpg" width="80%" height="80%" alt="posicionamiento en internet"></a>
             <h3>SEO</h3>
             <h4>Posicionamiento inteligente orgánico </h4>
         </div>
         <div>
-            <a href="./pages/servicios.html"><img src="./img/accesibilidad.jpg" width="80%" height="80%"></a>
+            <a href="./pages/servicios.html"><img src="./img/accesibilidad.jpg" width="80%" height="80%" alt="accesibilidad web w3org, páginas web accesibles"></a>
             <h3>Accesibilidad web</h3>
             <h4>Revisión, análisis y remediación web </h4>
         </div>
     </section>
 
     <section class="gris">
-        <img src="./img/empresarios.jpg" width="80%" height="80%">
+        <img src="./img/empresarios.jpg" width="80%" height="80%" alt="empresarios tomando decisiones de páginas web">
         <div class="gris-content">
             <h3>¿Qué hacemos?</h3>
             <h2>Nosotros</h2>
@@ -125,16 +125,16 @@
             <div class="grid-container">
 
                 <div class="basic-page"></a><img src="./img/buho.jpg">Basic Page <a href="https://buho.media"
-                        target="blank">Conoce las características</a></div>
+                        target="blank" alt="Buho media">Conoce las características</a></div>
                 <div class="Informativa"><img src="./img/cool.jpg">Informativa <a href="https://coolnutsmx.com/"
                         target="blank">Contiene recetas</a></div>
-                <div class="Estandar"><img src="./img/luxury.jpg">Estandar Page <a href="http://luxuryconcierge.com.mx/"
+                <div class="Estandar"><img src="./img/luxury.jpg" alt="Página web Cancun">Estandar Page <a href="http://luxuryconcierge.com.mx/"
                         target="blank">Descubre la Riviera Maya</a></div>
-                <div class="Portal"><img src="./img/tecnotabla.jpg">Portal web <a href="https://tecnotabla.com/"
+                <div class="Portal"><img src="./img/tecnotabla.jpg" alt="Página web de diseño para arquitectos">Portal web <a href="https://tecnotabla.com/"
                         target="blank">Utilidades al alcance</a></div>
-                <div class="Portafolio"><img src="./img/vania.jpg">Portafolio <a href="http://vaniajacobo.com/"
+                <div class="Portafolio"><img src="./img/vania.jpg" alt="Directora de Arte">Portafolio <a href="http://vaniajacobo.com/"
                         target="blank">Directora de arte</a></div>
-                <div class="Corporativa"><img src="./img/bonelli.jpg">Corporativa <a
+                <div class="Corporativa"><img src="./img/bonelli.jpg" alt="Página web de directores de cine y arte">Corporativa <a
                         href="https://bonellicontreras.com/" target="blank">Directores de cine</a> </div>
             </div>
         </grid>
