--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -75,7 +75,7 @@
 
     <body>
         <section class="gris">
-            <img src="../img/web.jpg" width="80%" height="80%">
+            <img src="../img/web.jpg" width="80%" height="80%" alt="Servicios web">
             <div class="gris-content">
                 <h2>Desarrollo Web</h2>
                 <h3>A tu medida y lo que realmente necesitas</h3>
@@ -87,7 +87,7 @@
                 
         </section>
         <section class="gris">
-            <img src="../img/seo.jpg" width="80%" height="80%">
+            <img src="../img/seo.jpg" width="80%" height="80%" alt="Servicio de posicionamiento web">
             <div class="gris-content">
                 <h2>SEO</h2>
                 <h3>Posicionamiento inteligente orgánico</h3>
@@ -100,7 +100,7 @@
                 
         </section>
         <section class="gris">
-            <img src="../img/accesibilidad.jpg" width="80%" height="80%">
+            <img src="../img/accesibilidad.jpg" width="80%" height="80%" alt="Página accesible">
             <div class="gris-content">
                 <h2>Accesibilidad Web</h2>
                 <p>Nuestros servicios abarcan la optimización de elementos clave como el contraste de colores, la
