EQUIPO DE TRABAJO

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -75,7 +75,7 @@
     <body>
         <section>
             <div class="nosotros">
-                <img src="../img/home-nosotros.jpg" width="800px" alt="quienes somos">
+                <img src="../img/home-nosotros.jpg" width="800px" alt="EQUIPO DE TRABAJO">
             </div>
             <div class="nosotros-text">
                 <h2>La historia...</h2>
