--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -66,7 +66,7 @@
         </nav>
     </header>
     <main>
-        <section class="backserv">
+        <section class="backnous">
             <h1>PREGUNTAS FRECUENTES</h1>
             <h2>ACLARA TUS DUDAS</h2>
         </section>
