--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </section>
     </main>
     <section class="tsecciones">
-        <h3>Lo que podemos hacer por ti</h3>
+        <h3>Lo que podemos <BR> hacer por ti</h3>
         <h2>LOS 3 GRANDES</h2>
     </section>
 
