--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -67,7 +67,7 @@
     </header>
     <main>
         <section class="backnous">
-            <h1>PREGUNTAS FRECUENTES</h1>
+            <h1>PREGUNTAS FRECUENTES <BR> "FAQ"</h1>
             <h2>ACLARA TUS DUDAS</h2>
         </section>
     </main>
