--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,7 +66,7 @@
         </nav>
     </header>
     <main>
-        <section class="backnous">
+        <section class="backhome">
             <h1>CONTACTO</h1>
             <h2>Queremos saber de ti</h2>
         </section>
