--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -112,7 +112,7 @@
                 
         </section>
         <section class="final">
-            <button class="primary-button"><a href="https://wa.me/+528180882054?" target="_blank">Envia un mensaje por
+            <button class="secondary-button"><a href="https://wa.me/+528180882054?" target="_blank">Envia un mensaje por
                     WhatsApp</a> </button>
         </section>
         <footer>
