--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -16,7 +16,7 @@
     <meta name="creationdate" content="29/07/24">
     <meta name="distribution" content="global">
     <meta name="rating" content="general">
-    <!--! PROTOCOLO OPEN GRAFH-->
+    <!--! PROTOCOLO OPEN GRAPH-->
     <meta property="og:type" content="página web informativa">
     <meta property="og:title" content="Claudia Gutiérrez | Desarrollo web">
     <meta property="og:description"
