--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 páginas web ha evolucionado hacia la creación de soluciones integrales, con un enfoque especial en la
                 experiencia del usuario.</p>
             <div class="buttons-content">
-                <button class="primary-button">Conoce más</button>
-                <button class="secondary-button">¿Cuál es mi página ideal?</button>
+                <button href="https://claugutierrezt.github.io/coderhouse/pages/nosotros.html" class="primary-button">Conoce más</button>
+                <button href="https://claugutierrezt.github.io/coderhouse/pages/FAQ.html" class="secondary-button">¿Cuál es mi página ideal?</button>
             </div>
         </div>
     </section>
