--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                 experiencia del usuario.</p>
             <div class="buttons-content">
                 <button href="https://claugutierrezt.github.io/coderhouse/pages/nosotros.html" class="primary-button">Conoce más</button>
-                <button href="https://claugutierrezt.github.io/coderhouse/pages/FAQ.html" class="secondary-button">¿Cuál es mi página ideal?</button>
+                <button href="https://claugutierrezt.github.io/coderhouse/pages/FAQ.html
+                " class="secondary-button">¿Cuál es mi página ideal?</button>
             </div>
         </div>
     </section>
