más sobre nosotros botón

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 páginas web ha evolucionado hacia la creación de soluciones integrales, con un enfoque especial en la
                 experiencia del usuario.</p>
             <div class="buttons-content">
-                <a class="primary-button" href="https://claugutierrezt.github.io/coderhouse/pages/nosotros.html" role="button">Conoce más</a>
+                <a class="primary-button" href="https://claugutierrezt.github.io/coderhouse/pages/nosotros.html" role="button">Más sobre nosotros</a>
                 <button class="primary-button">Conoce más</button>
                 <button class="secondary-button">¿Cuál es mi página ideal?</button>
             </div>
