--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,6 +32,7 @@
     <link rel="icon" type="../img/favicon.png" href="../img/favicon.png" />
     <title>Desarrollo Web | Claudia Gutiérrez</title>
 </head>
+
 <body>
     <header>
         <img src="../img/logo.png">
@@ -72,65 +73,40 @@
     </main>
     <section class="contacto">
         <div>
-            <h3>Envíanos un mensaje</h3>
-            <form class="needs-validation" novalidate>
-                <div class="form-row">
-                    <div class="col-md-4 mb-3">
-                        <label for="validationTooltip01">Nombre</label>
-                        <input type="text" class="form-control" id="nombre" value="" required>
-                        <div class="valid-tooltip">
-                            Looks good!
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-3">
-                        <label for="validationTooltip02">Apellido</label>
-                        <input type="text" class="form-control" id="validationTooltip02" value="" required>
-                        <div class="valid-tooltip">
-                            Looks good!
-                        </div>
-                    </div>
-                    <div class="col-md-5 mb-3">
-                        <label for="validationTooltip02">Email</label>
-                        <input type="text" class="form-control" id="validationTooltip03" value="" required>
-                        <div class="valid-tooltip">
-                            Looks good!
-                        </div>
-                    </div>
+            <h2>Suscríbete a nuestro blog</h2>
+            <form action="/action_page.php">
+                <div class="mb-3 mt-3">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
                 </div>
-                <div class="form-row">
-                    <div class="col-md-6 mb-3">
-                        <label for="validationTooltip04">Ciudad</label>
-                        <input type="text" class="form-control" id="validationTooltip03" required>
-                        <div class="invalid-tooltip">
-                            Escribe tu ciudad
-                        </div>
-                    </div>
+                <div class="mb-3">
+                    <label for="pwd">Nombre:</label>
+                    <input type="nombre" class="form-control" id="pwd" placeholder="Escribe tu nombre" name="nombre">
                 </div>
-                <div class="form-group">
-                    <label for="validationTooltip05">Comentarios</label>
-                    <input type="text-area" class="form-control" id="comentarios" value="" required>
-                    <div class="valid-tooltip">
-                    </div>
+                <div class="form-check mb-3">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" name="remember"> Recuerdame
+                    </label>
                 </div>
-                <div><br></div>
-                <button class="btn btn-primary" type="submit">Envia tus datos</button>
+                <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
         </div>
-        <div class="map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241132.31520791273!2d-99.31119542747015!3d19.208631818266003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff12e552de1d%3A0x25db497885c56f3!2sSiempre%20viva%20Vegana!5e0!3m2!1ses-419!2smx!4v1718752907454!5m2!1ses-419!2smx"
-                width="250" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="list">
-            <ul class="list-group">
-                <li class="list-group-item"><a href="mailto:claugutierrezt@gmail.com" target="_blank"> Email:
-                        claugutierrezt@gmail.com</a></li>
-                <li class="list-group-item"><a href="https://claudiagutierrezweb.com" target="_blank"> Página
-                        personal: claudiagutierrezweb.com<a></li>
-                <li class="list-group-item">CDMX; México</li>
-            </ul>
-        </div>
+    </section>
+    <div class="map">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241132.31520791273!2d-99.31119542747015!3d19.208631818266003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff12e552de1d%3A0x25db497885c56f3!2sSiempre%20viva%20Vegana!5e0!3m2!1ses-419!2smx!4v1718752907454!5m2!1ses-419!2smx"
+            width="250" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div class="list">
+        <ul class="list-group">
+            <li class="list-group-item"><a href="mailto:claugutierrezt@gmail.com" target="_blank"> Email:
+                    claugutierrezt@gmail.com</a></li>
+            <li class="list-group-item"><a href="https://claudiagutierrezweb.com" target="_blank"> Página
+                    personal: claudiagutierrezweb.com<a></li>
+            <li class="list-group-item">CDMX; México</li>
+        </ul>
+    </div>
     </section>
     <footer>
         <section class="footer-section">
