--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,7 +73,7 @@
     </main>
     <section class="contacto">
         <div>
-            <h2>Suscríbete a nuestro blog</h2>
+            <h2>Suscríbete a nuestro boletín</h2>
             <form action="/action_page.php">
                 <div class="mb-3 mt-3">
                     <label for="email">Email:</label>
