--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -68,10 +68,10 @@
     <main>
         <section class="contacto">
             <div>
-                <h3>Envíanos un mensaje</h3>
+                <h3>Suscríbete a nuestro blog</h3>
                 <form>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
+                        <label for="exampleInputEmail1">Email</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                             placeholder="Enter email">
                         <small id="emailHelp" class="form-text text-muted">No compartiremos tus datos</small>
@@ -82,9 +82,9 @@
                     </div>
                     <div class="form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        <label class="form-check-label" for="exampleCheck1">Recuerdame</label>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
                 </form>
             </div>
             <div class="map">
