--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,7 +32,14 @@
     <link rel="icon" type="../img/favicon.png" href="../img/favicon.png" />
     <title>Desarrollo Web | Claudia Gutiérrez</title>
 </head>
-
+<main>
+    <section class="backhome">
+        <h1>CONTACTO</h1>
+        <h2>Queremos saber de ti</h2>
+    </section>
+</main>
+<section class="contacto">
+    <div>
 <body>
     <header>
         <img src="../img/logo.png">
