--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,14 +66,11 @@
         </nav>
     </header>
     <main>
-        <section class="backhome">
-            <h1>CONTACTO</h1>
-            <h2>Queremos saber de ti</h2>
+        <section class="backnous">
+            <h1>DESARROLLO ESPECIALIZADO DE PÁGINAS WEB</h1>
+            <h2>Claudia Gutiérrez Web</h2>
         </section>
     </main>
-    <section class="contacto">
-        <div>
-    <main>
         <section class="contacto">
             <div>
                 <h3>Suscríbete a nuestro blog</h3>
