--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,9 +66,9 @@
         </nav>
     </header>
     <main>
-        <section class="backnous">
-            <h1>DESARROLLO ESPECIALIZADO DE PÁGINAS WEB</h1>
-            <h2>Claudia Gutiérrez Web</h2>
+        <section class="backhome">
+            <h1>Contactanos</h1>
+            <h2>Queremos saber de ti</h2>
         </section>
     </main>
         <section class="contacto">
