--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 páginas web ha evolucionado hacia la creación de soluciones integrales, con un enfoque especial en la
                 experiencia del usuario.</p>
             <div class="buttons-content">
-                <a class="primary-button" href="https://claugutierrezt.github.io/coderhouse/pages/nosotros.html" role="button">Conoce más</a>
-                <a class="secondary-button" href="https://claugutierrezt.github.io/coderhouse/pages/FAQ.html" role="button">Preguntas frecuentes</a>
+                <a class="primary-button" href="https://coder.claudiagutierrezweb.com/pages/nosotros.html" role="button">Conoce más</a>
+                <a class="secondary-button" href="https://coder.claudiagutierrezweb.com/pages/FAQ.html" role="button">Preguntas frecuentes</a>
             </div>
         </div>
     </section>
